# predictions

./: Makefile  README.md  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat
classification/: README.md
docs/: README.md
src/app/: main.py
