[tool.poetry]
name = "python-repository-template"
version = "0.2.0"
description = "A Python repository template."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.3"
ultralytics = "^8.2.6"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
keras = "^3.3.3"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
